ec2-lab6-webserver.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: WebServer
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t1.micro
  #  AllowedValues:
  #  - t1.micro
  #  - t2.nano
  #  - t2.micro
    ConstraintDescription: must be a valid EC2 instance type.
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Mappings:
  AWSInstanceType2Arch:
    t1.micro:
      Arch: PV64
    t2.nano:
      Arch: HVM64
    t2.micro:
      Arch: HVM64

  AWSRegionArch2AMI:
    us-west-1:
      PV64: ami-0a1a70369f0fce06a
      HVM64: ami-0a1a70369f0fce06a
#    eu-west-2:
#      PV64: NOT_SUPPORTED
#      HVM64: ami-886369ec
#    eu-west-3:
#      PV64: NOT_SUPPORTED
#      HVM64: NOT_SUPPORTED

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access via port 80 locked down to the load balancer
        + SSH access
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp:
          Ref: SSHLocation
  DBSecurityGroup:
      Type: AWS::RDS::DBSecurityGroup
      Properties:
        DBSecurityGroupIngress:
          EC2SecurityGroupName:
            Ref: WebServerSecurityGroup
        GroupDescription: Frontend Access
  WebServerInstance: 
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Fn::FindInMap:
        - AWSRegionArch2AMI
        - Ref: AWS::Region
        - Fn::FindInMap:
          - AWSInstanceType2Arch
          - Ref: InstanceType
          - Arch
      InstanceType:
        Ref: InstanceType
      SecurityGroups:
      - Ref: WebServerSecurityGroup
      Tags:
      - Key: Name
        Value: "av-websrv"
      KeyName:
        Ref: KeyName
      UserData:
        Fn::Base64: |
           '#!/bin/bash'
            apt update -y
            apt install -y php
            apt install -y httpd
            systemctl restart httpd
  DataBase:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: MYSQLDB
      DBSecurityGroups:
      - Ref: DBSecurityGroup
      AllocatedStorage: '5'
      DBInstanceClass: db.t2.micro
      Engine: MySQL
      MasterUsername: 'admin'
      MasterUserPassword: 'dbpass1234'
    DeletionPolicy: Snapshot     
Outputs:
  InstanceDNSName:
    Value:
      Fn::GetAtt:i
      - WebServerInstance
      - PublicDnsName
    Description: Instance DNS Name
  InstanceIP:
    Value:
      Fn::GetAtt:
      - WebServerInstance
      - PublicIp
    Description: Instance IP
